assets/style.css
/* ... */
.project--link:hover::before {
    transform: translateX(0);
}

.project--link::after {
    position: relative;
    z-index: 10;
    content: "";
    mask: url("./icons/arrow-right-line.svg") no-repeat 50% 50%;
    width: 24px;
    height: 24px;
    display: inline-block;
    mask-size: cover;
    background-color: white;
    transition: transform 500ms ease-in-out;
}

.project--link:hover::after {
    transform: translateX(4px);
}

.project--link-text {
    position: relative;
    z-index: 10
}

.project--title {
    font-size: 1.5rem;
    font-weight: 500;
}

.project--subtitle {
    font-size: 1.15rem;
    font-weight: 600;
    margin-top: 16px;
    margin-bottom: 8px;
}

.project--inner {
    opacity: 0;
    transform: scale(0.9);
    transition: opacity 750ms ease-out, transform 750ms ease-out;
}

.project--inner.project--in-view {
    opacity: 1;
    transform: scale(1);
}

.project+.project {
    margin-top: 32px;
}

@media (min-width: 1024px) {
    .main-content {
        padding: 16px 32px;
    }

    .project--inner {
        flex-direction: row;
        align-items: start;
    }

    .project:nth-child(even) .project--image-wrap {
        order: 1;
    }

    .project:nth-child(even) .project--details {
        order: 0;
    }
}

.main-subtitle {
    font-size: 24px;
    font-weight: 500;
    margin-top: 32px;
    text-align: center;
    margin-bottom: 32px;
}

.meteor {
    position: fixed;
    top: -32px;
    left: -32px;
    width: 128px;
    height: 2px;
    background: linear-gradient(90deg, var(--color-rose-50), var(--color-rose-200));
    transform-origin: top left;
    transform: rotate(45deg);
    opacity: 0;
    box-shadow: 0px 0px 8px 2px var(--color-rose-500);
}

.meteor::after {
    content: "";
    background-color: var(--color-rose-200);
    width: 8px;
    height: 8px;
    display: inline-block;
    border-radius: 999999px;
    position: absolute;
    right: 0;
    top: 50%;
    transform: translate(0, -50%);
    box-shadow: 0px 0px 8px 2px var(--color-rose-500);
}

.meteor-1 {
    width: 128px;
}

.meteor-2 {
    width: 64px;
}

.meteor-3 {
    width: 96px;
}

.meteor-4 {
    width: 72px;
}

.meteor-5 {
    width: 108px;
}

.star {
    position: fixed;
    left: 0;
    top: 0;
    box-shadow: 0px 0px 8px 2px var(--color-rose-500);
    width: 4px;
    height: 4px;
    border-radius: 99999px;
    background-color: var(--color-rose-500);
    opacity: 0;
}

.star::after {
    content: "";
    border-radius: 99999px;
    position: relative;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    opacity: 0;
}

.star-1 {
    --animation-duration: 7.5s;
}

.star-2 {
    --animation-duration: 10s;
}

.star-1::after {
    box-shadow: 0px 0px 96px 32px var(--color-rose-500);
}

.star-2::after {
    box-shadow: 0px 0px 128px 32px var(--color-rose-500);
}

@keyframes star-animation {
    0% {
        opacity: 0;
    }

    10% {
        opacity: 1;
    }

    90% {
        opacity: 1;
    }

    100% {
        opacity: 0;
    }
}

@keyframes star-shadow-animation {
    0% {
        opacity: 0;
    }

    10% {
        opacity: 0;
    }

    20% {
        opacity: 1;
    }

    80% {
        opacity: 1;
    }

    90% {
        opacity: 0;
    }

    100% {
        opacity: 0;
    }
}

.star--animated {
    animation: star-shadow-animation var(--animation-duration) ease-in-out infinite both;
}

.star--animated::after {
    animation: star-shadow-animation var(--animation-duration) ease-in-out infinite both;
}

.scroll-anchor {
    scroll-margin: 64px;
}

.contact-list {
    display: flex;
    flex-direction: column;
    gap: 8px;
    list-style-type: none;
}

.contact {
    display: grid;
    padding: 16px;
    background-color: var(--color-slate-950);
    border-radius: 16px;
    row-gap: 4px;
    column-gap: 16px;
    cursor: pointer;
    position: relative;
    overflow: hidden;
    grid-template-areas:
        "icon title"
        "icon link";
    justify-content: start;
    align-items: center;
}

.contact>* {
    z-index: 10;
}

.contact--icon {
    width: 32px;
    height: 32px;
    grid-area: icon;
}

.contact--title {
    font-size: 1rem;
    margin-bottom: 4px;
    grid-area: title;
}

.contact--link {
    text-decoration: none;
    color: var(--color-slate-50);
    grid-area: link;
}


.contact::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 0;
    background-color: var(--color-rose-950);
    transform: scaleX(0);
    transform-origin: left;
    transition: transform 250ms ease-in-out
}

.contact:hover::before {
    transform: scaleX(1);
}

.contact--link::after {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    content: "";
}

@media (min-width: 640px) {
    .contact-list {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
    }
}

@media (min-width: 1024px) {
    .contact-list {
        grid-template-columns: repeat(4, 1fr);
    }
}

.project-nav {
    list-style-type: none;
    display: flex;
    flex-direction: row;
    overflow-x: auto;
    column-gap: 8px;
    background-color: var(--color-slate-950);
    margin-left: -16px;
    margin-right: -16px;
}

.project-nav--big {
    position: relative;
    flex-wrap: wrap;
    z-index: 200;
    padding: 4px 16px;
}

.project-nav--stickied {
    position: sticky;
    top: calc(var(--header-height) + 48px);
    flex-wrap: nowrap;
    transform: translateY(-100%);
    z-index: 100;
    padding: 0 16px;
}

@media (min-width: 1024px) {
    .project-nav {
        margin-left: -32px;
        margin-right: -32px;
        padding: 4px 32px;
    }
}

.project-nav--link {
    height: 48px;
    display: flex;
    flex-direction: row;
    cursor: pointer;
    gap: 8px;
    white-space: nowrap;
    align-items: center;
    text-decoration: none;
    color: currentColor;
}
/* ... */

